new/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LCOMMENT
    DO
    SETPROP
    GETPROP
    LSHIFT
    NEW
    WITH
    EXPONENT
    SWITCH
    COLON
    GETP
    CASE
    URSHIFT
    REGEX
    AND
    BCOMMENT
    RSHIFT
    SETP
    CONDOP
    THIS
    OR
    DELETE

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     start -> statements
Rule 3     block -> LEFTBRACE blockmarker statements RIGHTBRACE
Rule 4     blockmarker -> <empty>
Rule 5     statements -> statement statements
Rule 6     statements -> statement
Rule 7     statement -> assignment SEMICOLON
Rule 8     statement -> declaration SEMICOLON
Rule 9     statement -> reassignment SEMICOLON
Rule 10    statement -> BREAK SEMICOLON
Rule 11    statement -> CONTINUE SEMICOLON
Rule 12    statement -> funcstmt SEMICOLON
Rule 13    statement -> if
Rule 14    statement -> ifelse
Rule 15    statement -> whileloop
Rule 16    statement -> funcdecl
Rule 17    statement -> forloop
Rule 18    statement -> reassignmentarray SEMICOLON
Rule 19    statement -> RETURN expression SEMICOLON
Rule 20    statement -> CONSOLE DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON
Rule 21    printList -> expression COMMA printList
Rule 22    printList -> expression
Rule 23    declaration -> VAR declarationList
Rule 24    declarationList -> ID COMMA declarationList
Rule 25    declarationList -> ID
Rule 26    assignment -> VAR assignlist
Rule 27    assignlist -> ID EQ expression COMMA assignlist
Rule 28    assignlist -> ID EQ expression
Rule 29    assignlist -> ID EQ array
Rule 30    reassignment -> ID EQ expression
Rule 31    reassignment -> ID PLUSEQ expression
Rule 32    reassignment -> ID MINUSEQ expression
Rule 33    reassignment -> ID INTOEQ expression
Rule 34    reassignment -> ID DIVEQ expression
Rule 35    reassignment -> ID INCR
Rule 36    reassignment -> ID DECR
Rule 37    reassignment -> ID LSHIFTEQ expression
Rule 38    reassignment -> ID RSHIFTEQ expression
Rule 39    reassignment -> ID URSHIFTEQ expression
Rule 40    reassignment -> ID ANDEQ expression
Rule 41    reassignment -> ID OREQ expression
Rule 42    reassignment -> ID XOREQ expression
Rule 43    reassignment -> ID MODEQ expression
Rule 44    reassignment -> LEFTPAREN reassignment RIGHTPAREN
Rule 45    array -> LEFTBRACKET arrayList RIGHTBRACKET
Rule 46    arrayList -> array COMMA arrayList
Rule 47    arrayList -> array
Rule 48    arrayList -> expression COMMA arrayList
Rule 49    arrayList -> expression
Rule 50    expression -> expression PLUS expression
Rule 51    expression -> expression MINUS expression
Rule 52    expression -> expression INTO expression
Rule 53    expression -> expression DIVIDE expression
Rule 54    expression -> expression MOD expression
Rule 55    expression -> LEFTPAREN expression RIGHTPAREN
Rule 56    expression -> NOT expression
Rule 57    expression -> expression BINAND expression
Rule 58    expression -> expression BINOR expression
Rule 59    expression -> expression BINXOR expression
Rule 60    expression -> BINNOT expression
Rule 61    expression -> expression LT expression
Rule 62    expression -> expression GT expression
Rule 63    expression -> expression DOUBLEEQ expression
Rule 64    expression -> expression NOTEQUAL expression
Rule 65    expression -> expression LTE expression
Rule 66    expression -> expression GTE expression
Rule 67    expression -> expression STREQUAL expression
Rule 68    expression -> expression STRNEQUAL expression
Rule 69    expression -> basicTypes
Rule 70    expression -> ID
Rule 71    expression -> TYPEOF expression
Rule 72    funcstmt -> ID EQ functioncall
Rule 73    funcstmt -> functioncall
Rule 74    funcstmt -> VAR ID EQ functioncall
Rule 75    expression -> arrayCall
Rule 76    reassignmentarray -> arrayCall EQ expression
Rule 77    arrayCall -> ID reference
Rule 78    reference -> LEFTBRACKET expression RIGHTBRACKET reference
Rule 79    reference -> LEFTBRACKET expression RIGHTBRACKET
Rule 80    basicTypes -> NUMBER
Rule 81    basicTypes -> BOOLEAN
Rule 82    basicTypes -> STRING
Rule 83    basicTypes -> UNDEFINED
Rule 84    functioncall -> ID LEFTPAREN argList RIGHTPAREN
Rule 85    argList -> expression
Rule 86    argList -> expression COMMA argList
Rule 87    argList -> <empty>
Rule 88    if -> IF expression ifelseblock block ifblockend
Rule 89    ifblockend -> <empty>
Rule 90    ifelse -> IF expression ifelseblock block ELSE elseblock block elseblockend
Rule 91    ifelseblock -> <empty>
Rule 92    elseblock -> empty
Rule 93    elseblockend -> empty
Rule 94    whileloop -> WHILE whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
Rule 95    whileblockstart -> empty
Rule 96    exprcheck -> empty
Rule 97    whileblockend -> empty
Rule 98    forloop -> FOR scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
Rule 99    scope_marker -> <empty>
Rule 100   forexpr_marker -> <empty>
Rule 101   forcheck_marker -> <empty>
Rule 102   increment_marker -> <empty>
Rule 103   endblock_marker -> <empty>
Rule 104   forblock -> LEFTBRACE statements RIGHTBRACE
Rule 105   initialization -> assignment
Rule 106   initialization -> reinitialization
Rule 107   reinitialization -> reassignment COMMA reinitialization
Rule 108   reinitialization -> reassignment
Rule 109   for_expr -> expression
Rule 110   increment -> reassignment SEMICOLON increment
Rule 111   increment -> reassignment
Rule 112   funcarghead -> funcargList
Rule 113   funcargList -> ID COMMA funcargList
Rule 114   funcargList -> ID
Rule 115   funcargList -> <empty>
Rule 116   funcdecl -> FUNCTION ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc
Rule 117   funcscopedefnormal -> <empty>
Rule 118   endfunc -> empty
Rule 119   funcdecl -> VAR ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
Rule 120   funblock -> LEFTBRACE statements RIGHTBRACE
Rule 121   funcscopedef -> <empty>
Rule 122   endfuncdecl -> <empty>
Rule 123   empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ANDEQ                : 40
BCOMMENT             : 
BINAND               : 57
BINNOT               : 60
BINOR                : 58
BINXOR               : 59
BOOLEAN              : 81
BREAK                : 10
CASE                 : 
COLON                : 
COMMA                : 21 24 27 46 48 86 107 113
CONDOP               : 
CONSOLE              : 20
CONTINUE             : 11
DECR                 : 36
DELETE               : 
DIVEQ                : 34
DIVIDE               : 53
DO                   : 
DOT                  : 20
DOUBLEEQ             : 63
ELSE                 : 90
EQ                   : 27 28 29 30 72 74 76 119
EXPONENT             : 
FOR                  : 98
FUNCTION             : 116 119
GETP                 : 
GETPROP              : 
GT                   : 62
GTE                  : 66
ID                   : 24 25 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 70 72 74 77 84 113 114 116 119
IF                   : 88 90
INCR                 : 35
INTO                 : 52
INTOEQ               : 33
LCOMMENT             : 
LEFTBRACE            : 3 104 120
LEFTBRACKET          : 45 78 79
LEFTPAREN            : 20 44 55 84 94 98 116 119
LOG                  : 20
LSHIFT               : 
LSHIFTEQ             : 37
LT                   : 61
LTE                  : 65
MINUS                : 51
MINUSEQ              : 32
MOD                  : 54
MODEQ                : 43
NEW                  : 
NOT                  : 56
NOTEQUAL             : 64
NUMBER               : 80
OR                   : 
OREQ                 : 41
PLUS                 : 50
PLUSEQ               : 31
REGEX                : 
RETURN               : 19
RIGHTBRACE           : 3 104 120
RIGHTBRACKET         : 45 78 79
RIGHTPAREN           : 20 44 55 84 94 98 116 119
RSHIFT               : 
RSHIFTEQ             : 38
SEMICOLON            : 7 8 9 10 11 12 18 19 20 98 98 110 119
SETP                 : 
SETPROP              : 
STREQUAL             : 67
STRING               : 82
STRNEQUAL            : 68
SWITCH               : 
THIS                 : 
TYPEOF               : 71
UNDEFINED            : 83
URSHIFT              : 
URSHIFTEQ            : 39
VAR                  : 23 26 74 119
WHILE                : 94
WITH                 : 
XOREQ                : 42
error                : 

Nonterminals, with rules where they appear

argList              : 84 86
array                : 29 46 47
arrayCall            : 75 76
arrayList            : 45 46 48
assignlist           : 26 27
assignment           : 7 105
basicTypes           : 69
block                : 1 88 90 90 94
blockmarker          : 3
declaration          : 8
declarationList      : 23 24
elseblock            : 90
elseblockend         : 90
empty                : 92 93 95 96 97 118
endblock_marker      : 98
endfunc              : 116
endfuncdecl          : 119
exprcheck            : 94
expression           : 19 21 22 27 28 30 31 32 33 34 37 38 39 40 41 42 43 48 49 50 50 51 51 52 52 53 53 54 54 55 56 57 57 58 58 59 59 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 71 76 78 79 85 86 88 90 94 109
for_expr             : 98
forblock             : 98
forcheck_marker      : 98
forexpr_marker       : 98
forloop              : 17
funblock             : 116 119
funcargList          : 112 113
funcarghead          : 116 119
funcdecl             : 16
funcscopedef         : 119
funcscopedefnormal   : 116
funcstmt             : 12
functioncall         : 72 73 74
if                   : 13
ifblockend           : 88
ifelse               : 14
ifelseblock          : 88 90
increment            : 98 110
increment_marker     : 98
initialization       : 98
printList            : 20 21
reassignment         : 9 44 107 108 110 111
reassignmentarray    : 18
reference            : 77 78
reinitialization     : 106 107
scope_marker         : 98
start                : 0
statement            : 5 6
statements           : 2 3 5 104 120
whileblockend        : 94
whileblockstart      : 94
whileloop            : 15

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) start -> . statements
    (3) block -> . LEFTBRACE blockmarker statements RIGHTBRACE
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . declaration SEMICOLON
    (9) statement -> . reassignment SEMICOLON
    (10) statement -> . BREAK SEMICOLON
    (11) statement -> . CONTINUE SEMICOLON
    (12) statement -> . funcstmt SEMICOLON
    (13) statement -> . if
    (14) statement -> . ifelse
    (15) statement -> . whileloop
    (16) statement -> . funcdecl
    (17) statement -> . forloop
    (18) statement -> . reassignmentarray SEMICOLON
    (19) statement -> . RETURN expression SEMICOLON
    (20) statement -> . CONSOLE DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON
    (26) assignment -> . VAR assignlist
    (23) declaration -> . VAR declarationList
    (30) reassignment -> . ID EQ expression
    (31) reassignment -> . ID PLUSEQ expression
    (32) reassignment -> . ID MINUSEQ expression
    (33) reassignment -> . ID INTOEQ expression
    (34) reassignment -> . ID DIVEQ expression
    (35) reassignment -> . ID INCR
    (36) reassignment -> . ID DECR
    (37) reassignment -> . ID LSHIFTEQ expression
    (38) reassignment -> . ID RSHIFTEQ expression
    (39) reassignment -> . ID URSHIFTEQ expression
    (40) reassignment -> . ID ANDEQ expression
    (41) reassignment -> . ID OREQ expression
    (42) reassignment -> . ID XOREQ expression
    (43) reassignment -> . ID MODEQ expression
    (44) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (72) funcstmt -> . ID EQ functioncall
    (73) funcstmt -> . functioncall
    (74) funcstmt -> . VAR ID EQ functioncall
    (88) if -> . IF expression ifelseblock block ifblockend
    (90) ifelse -> . IF expression ifelseblock block ELSE elseblock block elseblockend
    (94) whileloop -> . WHILE whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
    (116) funcdecl -> . FUNCTION ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc
    (119) funcdecl -> . VAR ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
    (98) forloop -> . FOR scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
    (76) reassignmentarray -> . arrayCall EQ expression
    (84) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (77) arrayCall -> . ID reference

    LEFTBRACE       shift and go to state 23
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 3
    CONSOLE         shift and go to state 17
    VAR             shift and go to state 21
    ID              shift and go to state 22
    LEFTPAREN       shift and go to state 19
    IF              shift and go to state 14
    WHILE           shift and go to state 2
    FUNCTION        shift and go to state 15
    FOR             shift and go to state 7

    statements                     shift and go to state 1
    if                             shift and go to state 4
    whileloop                      shift and go to state 5
    funcstmt                       shift and go to state 8
    arrayCall                      shift and go to state 9
    start                          shift and go to state 10
    reassignmentarray              shift and go to state 11
    ifelse                         shift and go to state 12
    statement                      shift and go to state 13
    forloop                        shift and go to state 16
    assignment                     shift and go to state 18
    declaration                    shift and go to state 20
    funcdecl                       shift and go to state 24
    reassignment                   shift and go to state 6
    functioncall                   shift and go to state 27
    block                          shift and go to state 28

state 1

    (2) start -> statements .

    $end            reduce using rule 2 (start -> statements .)


state 2

    (94) whileloop -> WHILE . whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
    (95) whileblockstart -> . empty
    (123) empty -> .

    LEFTPAREN       reduce using rule 123 (empty -> .)

    whileblockstart                shift and go to state 29
    empty                          shift and go to state 30

state 3

    (19) statement -> RETURN . expression SEMICOLON
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression INTO expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . expression MOD expression
    (55) expression -> . LEFTPAREN expression RIGHTPAREN
    (56) expression -> . NOT expression
    (57) expression -> . expression BINAND expression
    (58) expression -> . expression BINOR expression
    (59) expression -> . expression BINXOR expression
    (60) expression -> . BINNOT expression
    (61) expression -> . expression LT expression
    (62) expression -> . expression GT expression
    (63) expression -> . expression DOUBLEEQ expression
    (64) expression -> . expression NOTEQUAL expression
    (65) expression -> . expression LTE expression
    (66) expression -> . expression GTE expression
    (67) expression -> . expression STREQUAL expression
    (68) expression -> . expression STRNEQUAL expression
    (69) expression -> . basicTypes
    (70) expression -> . ID
    (71) expression -> . TYPEOF expression
    (75) expression -> . arrayCall
    (80) basicTypes -> . NUMBER
    (81) basicTypes -> . BOOLEAN
    (82) basicTypes -> . STRING
    (83) basicTypes -> . UNDEFINED
    (77) arrayCall -> . ID reference

    LEFTPAREN       shift and go to state 35
    NOT             shift and go to state 40
    BINNOT          shift and go to state 42
    ID              shift and go to state 36
    TYPEOF          shift and go to state 39
    NUMBER          shift and go to state 32
    BOOLEAN         shift and go to state 38
    STRING          shift and go to state 34
    UNDEFINED       shift and go to state 31

    arrayCall                      shift and go to state 33
    expression                     shift and go to state 37
    basicTypes                     shift and go to state 41

state 4

    (13) statement -> if .

    BREAK           reduce using rule 13 (statement -> if .)
    CONTINUE        reduce using rule 13 (statement -> if .)
    RETURN          reduce using rule 13 (statement -> if .)
    CONSOLE         reduce using rule 13 (statement -> if .)
    VAR             reduce using rule 13 (statement -> if .)
    ID              reduce using rule 13 (statement -> if .)
    LEFTPAREN       reduce using rule 13 (statement -> if .)
    IF              reduce using rule 13 (statement -> if .)
    WHILE           reduce using rule 13 (statement -> if .)
    FUNCTION        reduce using rule 13 (statement -> if .)
    FOR             reduce using rule 13 (statement -> if .)
    $end            reduce using rule 13 (statement -> if .)
    RIGHTBRACE      reduce using rule 13 (statement -> if .)


state 5

    (15) statement -> whileloop .

    BREAK           reduce using rule 15 (statement -> whileloop .)
    CONTINUE        reduce using rule 15 (statement -> whileloop .)
    RETURN          reduce using rule 15 (statement -> whileloop .)
    CONSOLE         reduce using rule 15 (statement -> whileloop .)
    VAR             reduce using rule 15 (statement -> whileloop .)
    ID              reduce using rule 15 (statement -> whileloop .)
    LEFTPAREN       reduce using rule 15 (statement -> whileloop .)
    IF              reduce using rule 15 (statement -> whileloop .)
    WHILE           reduce using rule 15 (statement -> whileloop .)
    FUNCTION        reduce using rule 15 (statement -> whileloop .)
    FOR             reduce using rule 15 (statement -> whileloop .)
    $end            reduce using rule 15 (statement -> whileloop .)
    RIGHTBRACE      reduce using rule 15 (statement -> whileloop .)


state 6

    (9) statement -> reassignment . SEMICOLON

    SEMICOLON       shift and go to state 43


state 7

    (98) forloop -> FOR . scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
    (99) scope_marker -> .

    LEFTPAREN       reduce using rule 99 (scope_marker -> .)

    scope_marker                   shift and go to state 44

state 8

    (12) statement -> funcstmt . SEMICOLON

    SEMICOLON       shift and go to state 45


state 9

    (76) reassignmentarray -> arrayCall . EQ expression

    EQ              shift and go to state 46


state 10

    (0) S' -> start .



state 11

    (18) statement -> reassignmentarray . SEMICOLON

    SEMICOLON       shift and go to state 47


state 12

    (14) statement -> ifelse .

    BREAK           reduce using rule 14 (statement -> ifelse .)
    CONTINUE        reduce using rule 14 (statement -> ifelse .)
    RETURN          reduce using rule 14 (statement -> ifelse .)
    CONSOLE         reduce using rule 14 (statement -> ifelse .)
    VAR             reduce using rule 14 (statement -> ifelse .)
    ID              reduce using rule 14 (statement -> ifelse .)
    LEFTPAREN       reduce using rule 14 (statement -> ifelse .)
    IF              reduce using rule 14 (statement -> ifelse .)
    WHILE           reduce using rule 14 (statement -> ifelse .)
    FUNCTION        reduce using rule 14 (statement -> ifelse .)
    FOR             reduce using rule 14 (statement -> ifelse .)
    $end            reduce using rule 14 (statement -> ifelse .)
    RIGHTBRACE      reduce using rule 14 (statement -> ifelse .)


state 13

    (5) statements -> statement . statements
    (6) statements -> statement .
    (5) statements -> . statement statements
    (6) statements -> . statement
    (7) statement -> . assignment SEMICOLON
    (8) statement -> . declaration SEMICOLON
    (9) statement -> . reassignment SEMICOLON
    (10) statement -> . BREAK SEMICOLON
    (11) statement -> . CONTINUE SEMICOLON
    (12) statement -> . funcstmt SEMICOLON
    (13) statement -> . if
    (14) statement -> . ifelse
    (15) statement -> . whileloop
    (16) statement -> . funcdecl
    (17) statement -> . forloop
    (18) statement -> . reassignmentarray SEMICOLON
    (19) statement -> . RETURN expression SEMICOLON
    (20) statement -> . CONSOLE DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON
    (26) assignment -> . VAR assignlist
    (23) declaration -> . VAR declarationList
    (30) reassignment -> . ID EQ expression
    (31) reassignment -> . ID PLUSEQ expression
    (32) reassignment -> . ID MINUSEQ expression
    (33) reassignment -> . ID INTOEQ expression
    (34) reassignment -> . ID DIVEQ expression
    (35) reassignment -> . ID INCR
    (36) reassignment -> . ID DECR
    (37) reassignment -> . ID LSHIFTEQ expression
    (38) reassignment -> . ID RSHIFTEQ expression
    (39) reassignment -> . ID URSHIFTEQ expression
    (40) reassignment -> . ID ANDEQ expression
    (41) reassignment -> . ID OREQ expression
    (42) reassignment -> . ID XOREQ expression
    (43) reassignment -> . ID MODEQ expression
    (44) reassignment -> . LEFTPAREN reassignment RIGHTPAREN
    (72) funcstmt -> . ID EQ functioncall
    (73) funcstmt -> . functioncall
    (74) funcstmt -> . VAR ID EQ functioncall
    (88) if -> . IF expression ifelseblock block ifblockend
    (90) ifelse -> . IF expression ifelseblock block ELSE elseblock block elseblockend
    (94) whileloop -> . WHILE whileblockstart LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend
    (116) funcdecl -> . FUNCTION ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc
    (119) funcdecl -> . VAR ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
    (98) forloop -> . FOR scope_marker LEFTPAREN initialization SEMICOLON forexpr_marker for_expr forcheck_marker SEMICOLON increment increment_marker RIGHTPAREN forblock endblock_marker
    (76) reassignmentarray -> . arrayCall EQ expression
    (84) functioncall -> . ID LEFTPAREN argList RIGHTPAREN
    (77) arrayCall -> . ID reference

    RIGHTBRACE      reduce using rule 6 (statements -> statement .)
    $end            reduce using rule 6 (statements -> statement .)
    BREAK           shift and go to state 25
    CONTINUE        shift and go to state 26
    RETURN          shift and go to state 3
    CONSOLE         shift and go to state 17
    VAR             shift and go to state 21
    ID              shift and go to state 22
    LEFTPAREN       shift and go to state 19
    IF              shift and go to state 14
    WHILE           shift and go to state 2
    FUNCTION        shift and go to state 15
    FOR             shift and go to state 7

    statements                     shift and go to state 48
    if                             shift and go to state 4
    whileloop                      shift and go to state 5
    funcstmt                       shift and go to state 8
    arrayCall                      shift and go to state 9
    reassignmentarray              shift and go to state 11
    ifelse                         shift and go to state 12
    statement                      shift and go to state 13
    forloop                        shift and go to state 16
    assignment                     shift and go to state 18
    declaration                    shift and go to state 20
    funcdecl                       shift and go to state 24
    reassignment                   shift and go to state 6
    functioncall                   shift and go to state 27

state 14

    (88) if -> IF . expression ifelseblock block ifblockend
    (90) ifelse -> IF . expression ifelseblock block ELSE elseblock block elseblockend
    (50) expression -> . expression PLUS expression
    (51) expression -> . expression MINUS expression
    (52) expression -> . expression INTO expression
    (53) expression -> . expression DIVIDE expression
    (54) expression -> . expression MOD expression
    (55) expression -> . LEFTPAREN expression RIGHTPAREN
    (56) expression -> . NOT expression
    (57) expression -> . expression BINAND expression
    (58) expression -> . expression BINOR expression
    (59) expression -> . expression BINXOR expression
    (60) expression -> . BINNOT expression
    (61) expression -> . expression LT expression
    (62) expression -> . expression GT expression
    (63) expression -> . expression DOUBLEEQ expression
    (64) expression -> . expression NOTEQUAL expression
    (65) expression -> . expression LTE expression
    (66) expression -> . expression GTE expression
    (67) expression -> . expression STREQUAL expression
    (68) expression -> . expression STRNEQUAL expression
    (69) expression -> . basicTypes
    (70) expression -> . ID
    (71) expression -> . TYPEOF expression
    (75) expression -> . arrayCall
    (80) basicTypes -> . NUMBER
    (81) basicTypes -> . BOOLEAN
    (82) basicTypes -> . STRING
    (83) basicTypes -> . UNDEFINED
    (77) arrayCall -> . ID reference

    LEFTPAREN       shift and go to state 35
    NOT             shift and go to state 40
    BINNOT          shift and go to state 42
    ID              shift and go to state 36
    TYPEOF          shift and go to state 39
    NUMBER          shift and go to state 32
    BOOLEAN         shift and go to state 38
    STRING          shift and go to state 34
    UNDEFINED       shift and go to state 31

    arrayCall                      shift and go to state 33
    expression                     shift and go to state 49
    basicTypes                     shift and go to state 41

state 15

    (116) funcdecl -> FUNCTION . ID funcscopedefnormal LEFTPAREN funcarghead RIGHTPAREN funblock endfunc

    ID              shift and go to state 50


state 16

    (17) statement -> forloop .

    BREAK           reduce using rule 17 (statement -> forloop .)
    CONTINUE        reduce using rule 17 (statement -> forloop .)
    RETURN          reduce using rule 17 (statement -> forloop .)
    CONSOLE         reduce using rule 17 (statement -> forloop .)
    VAR             reduce using rule 17 (statement -> forloop .)
    ID              reduce using rule 17 (statement -> forloop .)
    LEFTPAREN       reduce using rule 17 (statement -> forloop .)
    IF              reduce using rule 17 (statement -> forloop .)
    WHILE           reduce using rule 17 (statement -> forloop .)
    FUNCTION        reduce using rule 17 (statement -> forloop .)
    FOR             reduce using rule 17 (statement -> forloop .)
    $end            reduce using rule 17 (statement -> forloop .)
    RIGHTBRACE      reduce using rule 17 (statement -> forloop .)


state 17

    (20) statement -> CONSOLE . DOT LOG LEFTPAREN printList RIGHTPAREN SEMICOLON

    DOT             shift and go to state 51


state 18

    (7) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 52


state 19

    (44) reassignment -> LEFTPAREN . reassignment RIGHTPAREN
    (30) reassignment -> . ID EQ expression
    (31) reassignment -> . ID PLUSEQ expression
    (32) reassignment -> . ID MINUSEQ expression
    (33) reassignment -> . ID INTOEQ expression
    (34) reassignment -> . ID DIVEQ expression
    (35) reassignment -> . ID INCR
    (36) reassignment -> . ID DECR
    (37) reassignment -> . ID LSHIFTEQ expression
    (38) reassignment -> . ID RSHIFTEQ expression
    (39) reassignment -> . ID URSHIFTEQ expression
    (40) reassignment -> . ID ANDEQ expression
    (41) reassignment -> . ID OREQ expression
    (42) reassignment -> . ID XOREQ expression
    (43) reassignment -> . ID MODEQ expression
    (44) reassignment -> . LEFTPAREN reassignment RIGHTPAREN

    ID              shift and go to state 54
    LEFTPAREN       shift and go to state 19

    reassignment                   shift and go to state 53

state 20

    (8) statement -> declaration . SEMICOLON

    SEMICOLON       shift and go to state 55


state 21

    (26) assignment -> VAR . assignlist
    (23) declaration -> VAR . declarationList
    (74) funcstmt -> VAR . ID EQ functioncall
    (119) funcdecl -> VAR . ID EQ FUNCTION funcscopedef LEFTPAREN funcarghead RIGHTPAREN funblock SEMICOLON endfuncdecl
    (27) assignlist -> . ID EQ expression COMMA assignlist
    (28) assignlist -> . ID EQ expression
    (29) assignlist -> . ID EQ array
    (24) declarationList -> . ID COMMA declarationList
    (25) declarationList -> . ID

    ID              shift and go to state 58

    declarationList                shift and go to state 57
    assignlist                     shift and go to state 56

state 22

    (30) reassignment -> ID . EQ expression
    (31) reassignment -> ID . PLUSEQ expression
    (32) reassignment -> ID . MINUSEQ expression
    (33) reassignment -> ID . INTOEQ expression
    (34) reassignment -> ID . DIVEQ expression
    (35) reassignment -> ID . INCR
    (36) reassignment -> ID . DECR
    (37) reassignment -> ID . LSHIFTEQ expression
    (38) reassignment -> ID . RSHIFTEQ expression
    (39) reassignment -> ID . URSHIFTEQ expression
    (40) reassignment -> ID . ANDEQ expression
    (41) reassignment -> ID . OREQ expression
    (42) reassignment -> ID . XOREQ expression
    (43) reassignment -> ID . MODEQ expression
    (72) funcstmt -> ID . EQ functioncall
    (84) functioncall -> ID . LEFTPAREN argList RIGHTPAREN
    (77) arrayCall -> ID . reference
    (78) reference -> . LEFTBRACKET expression RIGHTBRACKET reference
    (79) reference -> . LEFTBRACKET expression RIGHTBRACKET

    EQ              shift and go to state 73
    PLUSEQ          shift and go to state 75
    MINUSEQ         shift and go to state 66
    INTOEQ          shift and go to state 61
    DIVEQ           shift and go to state 69
    INCR            shift and go to state 63
    DECR            shift and go to state 62
    LSHIFTEQ        shift and go to state 70
    RSHIFTEQ        shift and go to state 74
    URSHIFTEQ       shift and go to state 65
    ANDEQ           shift and go to state 72
    OREQ            shift and go to state 68
    XOREQ           shift and go to state 64
    MODEQ           shift and go to state 60
    LEFTPAREN       shift and go to state 71
    LEFTBRACKET     shift and go to state 67

    reference                      shift and go to state 59

state 23

    (3) block -> LEFTBRACE . blockmarker statements RIGHTBRACE
    (4) blockmarker -> .

    BREAK           reduce using rule 4 (blockmarker -> .)
    CONTINUE        reduce using rule 4 (blockmarker -> .)
    RETURN          reduce using rule 4 (blockmarker -> .)
    CONSOLE         reduce using rule 4 (blockmarker -> .)
    VAR             reduce using rule 4 (blockmarker -> .)
    ID              reduce using rule 4 (blockmarker -> .)
    LEFTPAREN       reduce using rule 4 (blockmarker -> .)
    IF              reduce using rule 4 (blockmarker -> .)
    WHILE           reduce using rule 4 (blockmarker -> .)
    FUNCTION        reduce using rule 4 (blockmarker -> .)
    FOR             reduce using rule 4 (blockmarker -> .)

    blockmarker                    shift and go to state 76

state 24

    (16) statement -> funcdecl .

    BREAK           reduce using rule 16 (statement -> funcdecl .)
    CONTINUE        reduce using rule 16 (statement -> funcdecl .)
    RETURN          reduce using rule 16 (statement -> funcdecl .)
    CONSOLE         reduce using rule 16 (statement -> funcdecl .)
    VAR             reduce using rule 16 (statement -> funcdecl .)
    ID              reduce using rule 16 (statement -> funcdecl .)
    LEFTPAREN       reduce using rule 16 (statement -> funcdecl .)
    IF              reduce using rule 16 (statement -> funcdecl .)
    WHILE           reduce using rule 16 (statement -> funcdecl .)
    FUNCTION        reduce using rule 16 (statement -> funcdecl .)
    FOR             reduce using rule 16 (statement -> funcdecl .)
    $end            reduce using rule 16 (statement -> funcdecl .)
    RIGHTBRACE      reduce using rule 16 (statement -> funcdecl .)


state 25

    (10) statement -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 77


state 26

    (11) statement -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 78


state 27

    (73) funcstmt -> functioncall .

    SEMICOLON       reduce using rule 73 (funcstmt -> functioncall .)


state 28

    (1) start -> block .

    $end            reduce using rule 1 (start -> block .)


state 29

    (94) whileloop -> WHILE whileblockstart . LEFTPAREN expression RIGHTPAREN exprcheck block whileblockend

    LEFTPAREN       shift and go to state 79


state 30

    (95) whileblockstart -> empty .

    LEFTPAREN       reduce using rule 95 (whileblockstart -> empty .)


state 31

    (83) basicTypes -> UNDEFINED .
